--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.72",
     "@datastax/astra-db-ts": "^1.5.0",
     "@langchain/community": "^0.3.14",
     "@langchain/core": "^0.3.18",
     "@langchain/openai": "^0.3.13",
+    "ai": "^3.4.33",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.459.0",
     "next": "15.0.3",
     "openai": "^4.72.0",
     "puppeteer": "^23.8.0",
